test/corpus/expression.txt
==========================
Strings
=========================

"A string with \"double\" and 'single' quotes";
'A string with "double" and \'single\' quotes';
'\\';
"\\";

'A string with new \
line';

---

(program
  (expression_statement
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment)))
  (expression_statement
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment)))
  (expression_statement
    (string
      (escape_sequence)))
  (expression_statement
    (string
      (escape_sequence)))
  (expression_statement
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment))))

==========================
Math operators
==========================

i++;
i--;
i + j * 3 - j % 5;

---

(program
  (expression_statement
    (update_expression
      (identifier)))
  (expression_statement
    (update_expression
      (identifier)))
  (expression_statement
    (binary_expression
      (binary_expression
        (identifier)
        (binary_expression
          (identifier)
          (number)))
      (binary_expression
        (identifier)
        (number)))))

==========================
Boolean operators
==========================

i || j;
i && j;
!a && !b;

---

(program
  (expression_statement
    (binary_expression
      (identifier)
      (identifier)))
  (expression_statement
    (binary_expression
      (identifier)
      (identifier)))
  (expression_statement
    (binary_expression
      (unary_expression
        (identifier))
      (unary_expression
        (identifier)))))

==========================
Bitwise operators
==========================

i >> j;
i << j;
i & j;
i | j;
~i ^ ~j;

---

(program
  (expression_statement
    (binary_expression
      (identifier)
      (identifier)))
  (expression_statement
    (binary_expression
      (identifier)
      (identifier)))
  (expression_statement
    (binary_expression
      (identifier)
      (identifier)))
  (expression_statement
    (binary_expression
      (identifier)
      (identifier)))
  (expression_statement
    (binary_expression
      (unary_expression
        (identifier))
      (unary_expression
        (identifier)))))

==========================
Relational operators
==========================

x < y;
x <= y;
x == y;
x != y;
x >= y;
x > y;

---

(program
      (expression_statement
        (binary_expression
          (identifier)
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier))))

==========================
Assignments
==========================

x = 0;
x.y = 0;
x["y"] = 0;
(x) = 1;
(x) += 1;
x &= 0;

---

(program
  (assign_statement
    left: (identifier)
    right: (number))
  (assign_statement
    left: (member_expression
      object: (identifier)
      property: (property_identifier))
    right: (number))
  (assign_statement
    left: (subscript_expression
      object: (identifier)
      index: (string
        (string_fragment)))
    right: (number))
  (assign_statement
    left: (parenthesized_expression
      (identifier))
    right: (number))
  (assign_statement
    left: (parenthesized_expression
      (identifier))
    right: (number))
  (assign_statement
    left: (identifier)
    right: (number)))

==========================
Assignments
==========================

condition ? case1 : case2;

x.y = some.condition ?
  some.case :
  some.other.case;

---

(program
  (expression_statement
    (ternary_expression
      condition: (identifier)
      consequence: (identifier)
      alternative: (identifier)))
  (assign_statement
    left: (member_expression
      object: (identifier)
      property: (property_identifier))
    right: (ternary_expression
      condition: (member_expression
        object: (identifier)
        property: (property_identifier))
      consequence: (member_expression
        object: (identifier)
        property: (property_identifier))
      alternative: (member_expression
        object: (member_expression
          object: (identifier)
          property: (property_identifier))
        property: (property_identifier)))))

==========================
Forward slashes after parenthesized expression
==========================

(foo - bar) / baz;
(this.a() / this.b() - 1) / 2;

---

(program
  (expression_statement
    (binary_expression
      (parenthesized_expression
        (binary_expression
          (identifier)
          (identifier)))
      (identifier)))
  (expression_statement
    (binary_expression
      (parenthesized_expression
        (binary_expression
          (binary_expression
            (call_expression
              (member_expression
                (identifier)
                (property_identifier))
              (arguments))
            (call_expression
              (member_expression
                (identifier)
                (property_identifier))
              (arguments)))
          (number)))
      (number))))

==========================
Lambda expression
==========================

const f = function(x) { return x; };

---

(program
  (const_declaration
    (names
      (identifier))
    (initializer
      value: (lambda_expression
        parameters: (function_parameters
          (typed_name_list
            (typed_name
              name: (identifier))))
        body: (statement_block
          (return_statement
            (identifier)))))))

==========================
Keyword arguments
==========================

foo(a=1, b=2);

---

(program
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (arguments
        (keyword_argument
          name: (identifier)
          value: (number))
        (keyword_argument
          name: (identifier)
          value: (number))))))

==========================
None literal
==========================

None;

---

(program
  (expression_statement
    (none)))

==========================
True and False
==========================

true;
True;
false;
False;

---

(program
  (expression_statement
    (true))
  (expression_statement
    (true))
  (expression_statement
    (false))
  (expression_statement
    (false)))
